# Malloc

./: CMakeLists.txt  Makefile  main.c  run.sh  run_linux.sh
corrections/: test0.c  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c
includes/: block_info.h  block_utils.h  free_utils.h  heap_utils.h  libc.h  logger.h  malloc.h  malloc_struct.h  malloc_utils.h  print_utils.h  realloc_utils.h
sources/: block_info.c  block_utils.c  calloc.c  extern_definition.c  free.c  free_utils.c  heap_utils.c  main.c  malloc.c  malloc_utils.c  page_size_utils.c  print_utils.c  realloc.c  realloc_utils.c  shift_utils.c  show_mem.c
sources/libc/: ft_bzero.c  ft_itoa_base.c  ft_memcpy.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strlen.c  ft_strncpy.c
sources/logger/: logger.c  logger_utils.c
test/: Makefile
test/correction/: test0.c  test1.c  test2.c  test3.c  test4.c  test5.c
test/src/: print.c  test_limit.c  test_malloc.c  test_mixed.c
